--- a/src/success.njk
+++ b/src/success.njk
@@ -7,5 +7,5 @@ layout: "base.njk"
     <h2 class="heading--main">
         Thanks for getting in touch!
     </h2>
-    <p>I'll respond as soon as I can.</p>
+    <p>I'll respond as soon as possible.</p>
 </div>
